# 42578_ABA

./: .gitignore  Dockerfile  README.md  cloudbuild.yaml  hf_README.md  notebook_utils.py  pyproject.toml
XAI/: saliency.py  test_saliency.py
bin_str/: lstm_classifier.ipynb
configs/: inference.yaml  resnet_type12.yaml
configs/training/: dataset.yaml  stage1_target.yaml  stage2_bullet.yaml
data/: README.md  instances.json  target_labels.csv
dockerfiles/: Dockerfile.cloudrun
docs/: CLOUD_CHECKLIST.md
hand-in/: 1_data.ipynb  1_overview_and_data.html  1_overview_and_data.ipynb
saliency_output/10_v1_jpg.rf.1YvEfjaa3HGuepilYx5S/: report.json
scripts/: _viz_single.py  audit_data.py  data_quality.py  deploy_hf.py  find_edge_cases.py  fix_bbox.py  prepare_resnet_type12_dataset.py  prepare_stage1_data.py  prepare_stage2_crops.py  train.py  visualize_annotations.py  visualize_splits.py
src/aba_rfdetr/: __init__.py  api.py  coco_labels.py  inference.py  prepare_roboflow_layout.py  saliency.py  schemas.py  train.py
src/aba_rfdetr/resnet_type_classifier/: __init__.py  dataset.py  eval.py  predict.py  train.py
src/aba_rfdetr/templates/: index.html
src/aba_rfdetr/training/: __init__.py  run.py
tests/: conftest.py  test_api.py
training/: README.md
